feat(deps): update to micronaut 3.2 (#945)
close #846